--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB2 - css</title>
+  <title>WEB1 - javascript</title>
   <meta charset="utf-8">
 </head>
 
